cc_library(
    name = "ToolLib",
    srcs = glob(["Source/*.cpp"]),
    hdrs = glob(["Public/ToolLib/*.h"]),
    includes = [
        "Public",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@toollib//ThirdParty/imgui",
        "@toollib//ThirdParty/minhook",
        "@toollib//ThirdParty/spdlog",
    ],
)
